added hover state on popups

--- a/styles/partials/_flickity.scss
+++ b/styles/partials/_flickity.scss
@@ -27,6 +27,10 @@
         	margin: 0 auto;
         	cursor: pointer;
         }
+
+		&.hide {
+			display: none;
+		}
     }
     .flickity-container {
         width: 100%;
